add gwt jvm heap/permgen params to release settings.xml